edit ApplicationConfig, add Jdbc access configuration, start jooq bean configuration, and some refactor, add missing dependency